cmake_minimum_required(VERSION 3.15)
project(DBProxy C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(lib)
include_directories(plugins/proxy)
include_directories(src)

add_executable(DBProxy
        lib/chassis.c
        lib/crc32-lua.c
        lib/crc32.c
        lib/crc32.h
        lib/glib2.c
        lib/lfs.c
        lib/lpeg.c
        lib/mysql-password.c
        lib/mysql-proto.c
        lib/posix.c
        lib/sql-tokenizer-gen.c
        lib/sql-tokenizer-keywords.h
        lib/sql-tokenizer-lua.c
        lib/sql-tokenizer-tokens.c
        lib/sql-tokenizer.h
        lib/time-ticker-lua.c
        plugins/admin/admin-plugin.c
        plugins/debug/debug-plugin.c
        plugins/proxy/proxy-percentile.c
        plugins/proxy/proxy-percentile.h
        plugins/proxy/proxy-plugin.c
        plugins/proxy/proxy-plugin.h
        plugins/proxy/proxy-sql-log.c
        plugins/proxy/proxy-sql-log.h
        plugins/replicant/replicant-plugin.c
        script/encrypt.c
        src/chassis-event-thread.c
        src/chassis-event-thread.h
        src/chassis-exports.h
        src/chassis-filemode.c
        src/chassis-filemode.h
        src/chassis-filter.c
        src/chassis-filter.h
        src/chassis-frontend.c
        src/chassis-frontend.h
        src/chassis-gtimeval.c
        src/chassis-gtimeval.h
        src/chassis-keyfile.c
        src/chassis-keyfile.h
        src/chassis-limits.c
        src/chassis-limits.h
        src/chassis-log.c
        src/chassis-log.h
        src/chassis-mainloop.c
        src/chassis-mainloop.h
        src/chassis-options-utils.c
        src/chassis-options-utils.h
        src/chassis-options.c
        src/chassis-options.h
        src/chassis-path.c
        src/chassis-path.h
        src/chassis-plugin.c
        src/chassis-plugin.h
        src/chassis-shutdown-hooks.c
        src/chassis-shutdown-hooks.h
        src/chassis-stats.c
        src/chassis-stats.h
        src/chassis-timings.c
        src/chassis-timings.h
        src/chassis-unix-daemon.c
        src/chassis-unix-daemon.h
        src/chassis-win32-service.c
        src/chassis-win32-service.h
        src/disable-dtrace.h
        src/glib-ext-ref.c
        src/glib-ext-ref.h
        src/glib-ext.c
        src/glib-ext.h
        src/lua-env.c
        src/lua-env.h
        src/lua-load-factory.c
        src/lua-load-factory.h
        src/lua-registry-keys.h
        src/lua-scope.c
        src/lua-scope.h
        src/my_rdtsc.c
        src/my_rdtsc.h
        src/mysql-binlog-dump.c
        src/mysql-myisam-dump.c
        src/mysql-proxy-cli.c
        src/network-address-lua.c
        src/network-address-lua.h
        src/network-address.c
        src/network-address.h
        src/network-backend-lua.c
        src/network-backend-lua.h
        src/network-backend.c
        src/network-backend.h
        src/network-conn-errcode.h
        src/network-conn-pool-lua.c
        src/network-conn-pool-lua.h
        src/network-conn-pool.c
        src/network-conn-pool.h
        src/network-debug.h
        src/network-exports.h
        src/network-injection-lua.c
        src/network-injection-lua.h
        src/network-injection.c
        src/network-injection.h
        src/network-mysqld-binlog.c
        src/network-mysqld-binlog.h
        src/network-mysqld-lua.c
        src/network-mysqld-lua.h
        src/network-mysqld-masterinfo.c
        src/network-mysqld-masterinfo.h
        src/network-mysqld-packet.c
        src/network-mysqld-packet.h
        src/network-mysqld-proto.c
        src/network-mysqld-proto.h
        src/network-mysqld-stats.h
        src/network-mysqld.c
        src/network-mysqld.h
        src/network-queue.c
        src/network-queue.h
        src/network-socket-lua.c
        src/network-socket-lua.h
        src/network-socket.c
        src/network-socket.h
        src/network_mysqld_proto_binary.c
        src/network_mysqld_proto_binary.h
        src/network_mysqld_type.c
        src/network_mysqld_type.h
        src/string-len.h
        src/sys-pedantic.h
        src/test-latency.c
        config.h)
